Develop: Fix z-index on translate page

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -5307,7 +5307,7 @@ section.loaded .footer .tab.open {
     text-decoration: none;
     right: -8%;
     width: 8%;
-    z-index: 999;
+    z-index: 1 !important;
 }
 
 section:hover .segment-side-buttons {
